<resources>
    <string name="app_name">FreshFoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_main">Main</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_marketplace">Marketplace</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_orders">Orders</string>
    <string name="promoted">Promoted</string>
    <string name="soon">Soon.......</string>
</resources>