<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mahmoudashraf.freshfoodapp.presentation.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_marketplace"
        android:name="com.mahmoudashraf.freshfoodapp.presentation.marketplace.MarketplaceFragment"
        android:label="@string/menu_marketplace"
        tools:layout="@layout/fragment_marketplace" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.mahmoudashraf.freshfoodapp.presentation.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.mahmoudashraf.freshfoodapp.presentation.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

</navigation>